# GPUCore

./: .gitignore  CMakeLists.txt  README.md  main.cu
src/: CMakeLists.txt
src/core/: c_abcore.cpp  c_abcore_decomp.cpp  core.cu  core.cuh  core_peel.cu  kcore.cu
src/graph/: graph.cpp  graph.h
src/util/: config.h  timer.cuh  uf.h  utility.h
